[package]
name = "indexd_wasm"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/SiaFoundation/sia-sdk-rs"
license = "MIT"
description = "WASM SDK for interacting with a Sia network indexer"
authors = ["The Sia Foundation"]
categories = ["cryptography::cryptocurrencies"]
keywords = ["sia", "decentralized", "blockchain", "depin", "storage"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
indexd = { version = "0.2.0", path = "../indexd" }
sia_sdk = { version = "0.2.0", path = "../sia_sdk" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
thiserror = "2.0"
rand = "0.10.0"
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.4", features = ["wasm_js"] }
tokio = { version = "1.49.0", features = ["rt", "sync"] }
bytes = "1"
console_error_panic_hook = "0.1"
log = "0.4"
console_log = "1"
instant = { version = "0.1", features = ["wasm-bindgen"] }
