[package]
name = "syncer_wasm"
version = "0.1.0"
edition = "2024"
description = "WASM demo for Sia syncer protocol via WebTransport"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sia_syncer = { path = "../syncer" }
sia_sdk = { path = "../sia_sdk" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "WebTransport",
    "WebTransportOptions",
    "WebTransportBidirectionalStream",
    "WebTransportReceiveStream",
    "WebTransportSendStream",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "WritableStream",
    "WritableStreamDefaultWriter",
    "console",
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.4", features = ["wasm_js"] }
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
blake2b_simd = "1.0"
siphasher = "1.0"
